# mara-cli

./: .travis.yml  CHANGELOG.md  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: build.yaml
mara_cli/: __init__.py  _mara_modules.py  cli.py
