[metadata]
name = mara-cli
version = attr: mara_cli.__version__
url = https://github.com/mara/mara-cli
description = Mara cli app which calls the appropriate contributed subcommand.
long_description = file: README.md
long_description_content_type = text/markdown
author = Mara contributors
license = MIT

[options]
packages = mara_cli
install_requires =
    mara-config>=0.2.0
    click
dependency_links = git+https://github.com/mara/mara-config.git@main#egg=mara-config

[options.extras_require]
test =
    pytest
    pytest_click

[options.entry_points]
console_scripts =
    mara = mara_cli.cli:main
